removing configurations from repository

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 ansible_python_interpreter=/usr/bin/python3
-inventory = /home/ignw/my_network_as_code/inventory
+inventory = inventory
 library = /usr/local/lib/python3.6/dist-packages/napalm_ansible/modules
 action_plugins = usr/local/lib/python3.6.dist-packages/napalm_ansible/plugins/action
 host_key_checking=False
